<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/royalblue"
        android:id="@+id/first_line">

        <ImageView
            android:id="@+id/txt_settings_return"
            android:layout_height="22dp"
            android:layout_width="50dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:onClick="onClick"
            android:src="@drawable/back_joern" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:layout_marginRight="50dp"
            android:layout_gravity="end"
            android:id="@+id/top_name"
            android:hint="@string/menu_setting"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_system"
        android:layout_marginLeft="16dp"
        style="?android:listSeparatorTextViewStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="48dp"
        android:id="@+id/settings_right">
        <ImageView
            android:id="@+id/icon_settings_right"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/settings_right"/>
        <TextView
            android:id="@+id/txt_settings_right"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="41dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:onClick="onClickMenu"
            android:textColor="#000000"
            android:text="@string/settings_right"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|right"/>
        <ImageView
            android:id="@+id/settings_right_icon"
            android:onClick="onClick"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center|right"
            android:src="@drawable/right_languagne"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="48dp"
        android:id="@+id/settings_language">
        <ImageView
            android:id="@+id/icon_settings_language"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/settings_language"/>
        <TextView
            android:id="@+id/txt_settings_language"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="41dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:onClick="onClickMenu"
            android:textColor="#000000"
            android:text="@string/settings_language"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/now_language"
            android:onClick="onClickMenu"/>
        <ImageView
            android:id="@+id/settings_language_icon"
            android:onClick="onClick"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center|right"
            android:src="@drawable/right_languagne"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_extra"
        android:layout_marginLeft="16dp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="48dp"
        android:id="@+id/settings_light">
        <ImageView
            android:id="@+id/icon_left_light_icon"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/settings_light"/>
        <TextView
            android:id="@+id/txt_settings_light"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="38dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:onClick="onClickMenu"
            android:textColor="#000000"
            android:text="@string/settings_bluelight"/>
        <TextView
            android:id="@+id/txt_light_state"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/settings_close"/>
        <ImageView
            android:id="@+id/image_light_state"
            android:onClick="onClick"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center|right"
            android:src="@drawable/right_languagne"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="48dp"
        android:id="@+id/settings_defend">
        <ImageView
            android:id="@+id/icon_left_defend_icon"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center"
            android:src="@drawable/settings_defend"/>
        <TextView
            android:id="@+id/txt_defend_light"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginStart="38dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:onClick="onClickMenu"
            android:textColor="#000000"
            android:text="@string/settings_parents"/>
        <TextView
            android:id="@+id/txt_defend_state"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:text="@string/settings_close"/>
        <ImageView
            android:id="@+id/image_defend_state"
            android:onClick="onClick"
            android:layout_width="40dp"
            android:layout_height="16dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center|right"
            android:src="@drawable/right_languagne"/>

    </LinearLayout>



</LinearLayout>